# BJTU_QT_Calculator

./: README.md
Calculator/: CMakeLists.txt  HPFloat.cpp  HPFloat.h  calculator.cpp  calculator.h  main.cpp  mainwindow.cpp  mainwindow.h
Calculator_Test/: CMakeLists.txt  HPFloat.h  tst_autotest.cpp
Calculator_Test/test_samples/: make_test_files.py  test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt
